--- a/hkube/templates/datasources-service-deployment.yaml
+++ b/hkube/templates/datasources-service-deployment.yaml
@@ -49,7 +49,7 @@ spec:
         - name: datasources-service
           image: "{{ .Values.global.registry }}{{ .Values.datasources_service.image.repository }}:{{ .Values.datasources_service.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-{{- if .Values.global.resources_enable }}          
+{{- if or .Values.global.resources_enable .Values.datasources_service.resources_enable }}
           resources:
 {{ toYaml .Values.datasources_service.resources | indent 12 }}
 {{- else }}
