--- a/hkube/templates/pre-upgrade.yaml
+++ b/hkube/templates/pre-upgrade.yaml
@@ -28,8 +28,8 @@ spec:
       restartPolicy: Never
       containers:
       - name: post-del-dep-and-jobs
-        image: "{{ .Values.global.registry }}{{ index .Values "delete_deployment_and_jobs" "image" "repository" }}:{{ index .Values "delete_deployment_and_jobs" "image" "tag" }}"
-{{- if .Values.global.resources_enable }}          
+        image: "{{ .Values.global.registry }}{{ .Values.delete_deployment_and_jobs.image.repository }}:{{ .Values.delete_deployment_and_jobs.image.tag }}"
+{{- if or .Values.global.resources_enable .Values.delete_deployment_and_jobs.resources_enable }}
         resources:
 {{ toYaml .Values.delete_deployment_and_jobs.resources | indent 10 }}
 {{- else }}
