--- a/hkube/templates/busybox-pod.yaml
+++ b/hkube/templates/busybox-pod.yaml
@@ -18,7 +18,7 @@ spec:
       - "3600"
     imagePullPolicy: IfNotPresent
     name: busybox
-{{- if .Values.global.resources_enable }}          
+{{- if or .Values.global.resources_enable .Values.busybox.resources_enable }}
     resources:
       limits:
         cpu: 50m
