--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -105,6 +105,17 @@ etcd:
     enabled: true
     storageClass: ''
     storage: 10Gi
+  resources: {}
+  # We usually recommend not to specify default resources and to leave this as a conscious
+  # choice for the user. This also increases chances charts run on environments with little
+  # resources, such as Minikube. If you do want to specify resources, uncomment the following
+  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+    # limits:
+    #   cpu: 1000m
+    #   memory: 4Gi
+    # requests:
+    #   cpu: 500m
+    #   memory: 2Gi
 redis-ha:
   enable: true
   # set number of replicas. defualt 3. If set to 1 also set min-slaves-to-write to 0
@@ -113,6 +124,29 @@ redis-ha:
     config:
       min-slaves-to-write: 1
       client-output-buffer-limit: "replica 1024mb 512mb 60"
+    resources: {}
+  # We usually recommend not to specify default resources and to leave this as a conscious
+  # choice for the user. This also increases chances charts run on environments with little
+  # resources, such as Minikube. If you do want to specify resources, uncomment the following
+  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+      # limits:
+      #   cpu: 1000m
+      #   memory: 4Gi
+      # requests:
+      #   cpu: 500m
+      #   memory: 2Gi
+  sentinel:
+    resources: {}
+  # We usually recommend not to specify default resources and to leave this as a conscious
+  # choice for the user. This also increases chances charts run on environments with little
+  # resources, such as Minikube. If you do want to specify resources, uncomment the following
+  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+      # limits:
+      #   cpu: 300m
+      #   memory: 512Mi
+      # requests:
+      #   cpu: 100m
+      #   memory: 256Mi
   # set to true for multiple nodes
   hardAntiAffinity: false
 jaeger:
@@ -151,6 +185,23 @@ jaeger:
 nginx-ingress:
   # install nginx-ingress-controller with hkube
   enable: false
+  # controller:
+  #   resources:
+  #     limits:
+  #       cpu: 300m
+  #       memory: 512Mi
+  #     requests:
+  #       cpu: 100m
+  #       memory: 256Mi
+  # defaultBackend:
+  #   resources:
+  #     limits:
+  #       cpu: 10m
+  #       memory: 20Mi
+  #     requests:
+  #       cpu: 10m
+  #       memory: 20Mi
+
 mongodb:
   enable: true
   useStatefulSet: true
@@ -171,6 +222,14 @@ minio:
     storageClass: ''
   serviceAccount: # +doc-gen:ignore
     create: false
+  resources: {}
+    # limits:
+    #   cpu: 300m
+    #   memory: 600Mi
+    # requests:
+    #   cpu: 100m
+    #   memory: 200Mi
+
 gitea:
   enable: true
   service:
@@ -264,8 +323,13 @@ algorithm_operator:
     periodSeconds: 60
     timeoutSeconds: 1
     failureThreshold: 3
+  # enable resource limits for algorithm operator
+  resources_enable: false
   # Compute resources required for algorithm-operator
   resources: # +doc-gen:break
+    limits:
+      cpu: 300m
+      memory: 1024Mi
     requests:
       cpu: 100m
       memory: 512Mi
@@ -304,11 +368,15 @@ api_server: # +doc-gen:ignore
     path: /hkube/api-server
   service:
     type: ClusterIP
+  resources_enable: false
   resources:
+    limits:
+      cpu: 300m
+      memory: 1024Mi
     requests:
       cpu: 100m
       memory: 512Mi
-datasciencemetrics_storage: # +doc-gen:ignore
+data_science_metrics_storage: # +doc-gen:ignore
     pvc:
       capacity: 50Gi
       storage_class: ''
@@ -330,7 +398,11 @@ datasources_service: # +doc-gen:ignore
     path: /hkube/datasources-service
   service:
     type: ClusterIP
+  resources_enable: false
   resources:
+    limits:
+      cpu: 300m
+      memory: 1024Mi
     requests:
       cpu: 100m
       memory: 512Mi
@@ -345,7 +417,11 @@ artifacts_registry: # +doc-gen:ignore
     path: /hkube/artifacts-registry
   service:
     type: ClusterIP
+  resources_enable: false
   resources:
+    limits:
+      cpu: 300m
+      memory: 1024Mi
     requests:
       cpu: 50m
       memory: 256Mi
@@ -406,7 +482,11 @@ gc_service: # +doc-gen:ignore
   image:
     repository: hkube/gc-service
     tag: v2.2.7
+  resources_enable: false
   resources:
+    limits:
+      cpu: 300m
+      memory: 1024Mi
     requests:
       cpu: 100m
       memory: 512Mi
@@ -423,10 +503,6 @@ gc_service: # +doc-gen:ignore
     periodSeconds: 60
     timeoutSeconds: 1
     failureThreshold: 3
-cpu-load-algorithm: # +doc-gen:ignore
-  image:
-    repository: hkube/cpu-load-algorithm
-    tag: v2.0.2
 tensorboard: # +doc-gen:ignore
   image:
     repository: hkube/tensorboard
@@ -440,7 +516,11 @@ delete_deployment_and_jobs: # +doc-gen:ignore
   image:
     repository: hkube/del-dep-and-jobs
     tag: v1.0.8
+  resources_enable: false
   resources:
+    limits:
+      cpu: 300m
+      memory: 1024Mi
     requests:
       cpu: 100m
       memory: 512Mi
@@ -473,7 +553,11 @@ monitor_server: # +doc-gen:ignore
     datasource_proxy_path: /hkube/monitor-server/datasource
   service:
     type: ClusterIP
+  resources_enable: false
   resources:
+    limits:
+      cpu: 300m
+      memory: 1024Mi
     requests:
       cpu: 100m
       memory: 512Mi
@@ -502,7 +586,11 @@ pipeline_driver_queue: # +doc-gen:ignore
   replicaCount: 1
   service:
     type: ClusterIP
+  resources_enable: false
   resources:
+    limits:
+      cpu: 300m
+      memory: 1024Mi
     requests:
       cpu: 100m
       memory: 512Mi
@@ -529,7 +617,11 @@ resource_manager: # +doc-gen:ignore
     tag: v2.2.3
   service:
     type: ClusterIP
+  resources_enable: false
   resources:
+    limits:
+      cpu: 300m
+      memory: 1024Mi
     requests:
       cpu: 100m
       memory: 512Mi
@@ -559,7 +651,11 @@ simulator: # +doc-gen:ignore
   service:
     port: 9050
     type: ClusterIP
+  resources_enable: false
   resources:
+    limits:
+      cpu: 300m
+      memory: 1024Mi
     requests:
       cpu: 100m
       memory: 512Mi
@@ -603,13 +699,14 @@ task_executor:
     tag: v2.2.5
   service: # +doc-gen:ignore
     type: ClusterIP
-  # Compute resources required for algorithm-operator
+  resources_enable: false
   resources: # +doc-gen:break
+    limits:
+      cpu: 300m
+      memory: 1024Mi
     requests:
       cpu: 100m
       memory: 512Mi
-thirdparty: # +doc-gen:ignore
-  enabled: true
 trigger_service: # +doc-gen:ignore
   env:
     metric_port: '3000'
@@ -618,7 +715,11 @@ trigger_service: # +doc-gen:ignore
     tag: v2.2.2
   service:
     type: ClusterIP
+  resources_enable: false
   resources:
+    limits:
+      cpu: 300m
+      memory: 1024Mi
     requests:
       cpu: 100m
       memory: 256Mi
@@ -669,32 +770,20 @@ algorithm_builder: # +doc-gen:ignore
   image:
     repository: hkube/algorithm-builder
     tag: v2.2.11
-  resources:
-    requests:
-      cpu: 100m
-      memory: 512Mi
 kaniko: # +doc-gen:ignore
   image:
     repository: hkube/kaniko
     tag: v2.2.1
-  resources:
-    requests:
-      cpu: 100m
-      memory: 1Gi
 oc_builder: # +doc-gen:ignore
   image:
     repository: hkube/oc-builder
     tag: v2.2.0
-  resources:
-    requests:
-      cpu: 100m
-      memory: 1Gi
 algorithm_example_python: # +doc-gen:ignore
   image:
     repository: hkube/algorithm-example-python
     tag: v2.2.4
 etcd_defrag: # +doc-gen:ignore
-  enable: true
+  enable: false
   pattern: '0 0 * * *'
   env:
     etcd_name: etcd
@@ -704,7 +793,11 @@ etcd_defrag: # +doc-gen:ignore
   image:
     repository: hkube/etcd-defrag-cron
     tag: v1.0.3
+  resources_enable: false
   resources:
+    limits:
+      cpu: 300m
+      memory: 1024Mi
     requests:
       cpu: 100m
       memory: 512Mi
@@ -716,15 +809,12 @@ sync_server: # +doc-gen:ignore
   ingress:
     enabled: true
     path: /hkube/sync
+  resources_enable: false
   resources:
+    limits:
+      cpu: 300m
+      memory: 512Mi
     requests:
       cpu: 100m
       memory: 256Mi
-storage_migration: # +doc-gen:ignore
-  enable: false
-  env:
-    source_storage_encoding: bson
-  image:
-    repository: hkube/storage-migration
-    tag: v2.2.0
 fullSystemVersion: v2.2.32-1643636178635
