--- a/hkube/templates/algorithm-operator-deployment.yaml
+++ b/hkube/templates/algorithm-operator-deployment.yaml
@@ -138,6 +138,10 @@ spec:
               value: {{ .Values.algorithm_operator.env.algorithm_builder_main_cpu | quote}}
             - name: ALGORITHM_BUILDER_MAIN_MEMORY
               value: {{ .Values.algorithm_operator.env.algorithm_builder_main_memory | quote}}
+            - name: ALGORITHM_QUEUE_MEMORY
+              value: {{ .Values.algorithm_operator.env.algorithm_queue_memory | quote}}
+            - name: ALGORITHM_QUEUE_CPU
+              value: {{ .Values.algorithm_operator.env.algorithm_queue_cpu | quote}}
             - name: RESOURCES_ENABLE
               value: {{ .Values.algorithm_operator.env.resources_enable | quote}}
 {{- if eq .Values.env.default_storage "fs" }}
