--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -296,6 +296,8 @@ algorithm_operator:
     algorithm_builder_builder_memory: 1024
     algorithm_builder_main_cpu: 0.5
     algorithm_builder_main_memory: 512
+    algorithm_queue_cpu: 0.5
+    algorithm_queue_memory: 512
     resources_enable: false
     algorithm_queue_interval: 1000
     algorithm_queue_concurrency_limit: 5
