--- a/hkube/templates/gc-service-deployment.yaml
+++ b/hkube/templates/gc-service-deployment.yaml
@@ -68,175 +68,16 @@ spec:
           ports:
             - containerPort: {{ .Values.gc_service.env.rest_port }}
               protocol: TCP
+          envFrom:
+            - configMapRef:
+                name: gc-service-configmap
           env:
 {{ include "hkube.fluent_bit.environment" . | indent 12 }}
-            - name: NODE_ENV
+            - name: NAMESPACE
               valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: NODE_ENV
-            - name: HKUBE_LOG_LEVEL
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: HKUBE_LOG_LEVEL
-            - name: REST_PORT
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: REST_PORT
-            - name: BASE_URL_PATH
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: BASE_URL_PATH
-            - name: DATASOURCE_CRON
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: DATASOURCE_CRON
-            - name: DATASOURCE_ENABLED
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: DATASOURCE_ENABLED
-            - name: DATASOURCE_MAX_AGE
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: DATASOURCE_MAX_AGE
-            - name: DATASOURCE_BASE_DIRECTORY
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: DATASOURCE_BASE_DIRECTORY
-            - name: DATASOURCE_FOLDER_IN_USE
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: DATASOURCE_FOLDER_IN_USE
-            - name: DEBUG_ENABLED
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: DEBUG_ENABLED
-            - name: DEBUG_MAX_AGE
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: DEBUG_MAX_AGE
-            - name: ETCD_CRON
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: ETCD_CRON
-            - name: ETCD_ENABLED
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: ETCD_ENABLED
-            - name: ETCD_MAX_AGE
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: ETCD_MAX_AGE
-            - name: GATEWAY_CRON
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: GATEWAY_CRON
-            - name: GATEWAY_ENABLED
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: GATEWAY_ENABLED
-            - name: GATEWAY_MAX_AGE
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: GATEWAY_MAX_AGE
-            - name: JOBS_CRON
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: JOBS_CRON
-            - name: JOBS_ENABLED
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: JOBS_ENABLED 
-            - name: JOBS_COMPLETED_MAX_AGE
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: JOBS_COMPLETED_MAX_AGE 
-            - name: JOBS_FAILED_MAX_AGE
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: JOBS_FAILED_MAX_AGE
-            - name: JOBS_PENDING_MAX_AGE
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: JOBS_PENDING_MAX_AGE
-            - name: DEBUG_CRON
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: DEBUG_CRON
-            - name: PIPELINES_CRON
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: PIPELINES_CRON
-            - name: PIPELINES_ENABLED
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: PIPELINES_ENABLED
-            - name: REDIS_CRON
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: REDIS_CRON
-            - name: REDIS_ENABLED
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: REDIS_ENABLED
-            - name: REDIS_MAX_AGE
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: REDIS_MAX_AGE
-            - name: STORAGE_CRON
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: STORAGE_CRON
-            - name: STORAGE_ENABLED
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: STORAGE_ENABLED
-            - name: STORAGE_RESULT_MAX_AGE
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: STORAGE_RESULT_MAX_AGE
-            - name: STORAGE_TEMP_MAX_AGE
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: STORAGE_TEMP_MAX_AGE
-{{- if eq .Values.env.default_storage "fs" }}
-            - name: BASE_FS_ADAPTER_DIRECTORY
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: BASE_FS_ADAPTER_DIRECTORY
-{{- else if eq .Values.env.default_storage "s3" }}
+                fieldRef:
+                  fieldPath: metadata.namespace
+{{- if eq .Values.env.default_storage "s3" }}
             - name: AWS_ACCESS_KEY_ID
               valueFrom:
                 secretKeyRef:
@@ -253,30 +94,6 @@ spec:
                   name: s3-secret
                   key: awsEndpointUrl
 {{- end }}
-            - name: DEFAULT_STORAGE
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: DEFAULT_STORAGE
-            - name: STORAGE_ENCODING
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: STORAGE_ENCODING                  
-            - name: CLUSTER_NAME
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: CLUSTER_NAME  
-            - name: NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
-            - name: INGRESS_PREFIX
-              valueFrom:
-                configMapKeyRef:
-                  name: gc-service-configmap
-                  key: INGRESS_PREFIX
 {{- if .Values.mongodb.enable }}
             - name: MONGODB_SERVICE_USER_NAME
               valueFrom:
