--- a/hkube/templates/pipeline-driver-queue-service.yaml
+++ b/hkube/templates/pipeline-driver-queue-service.yaml
@@ -13,10 +13,11 @@ spec:
   selector:
     app: pipeline-driver-queue
   ports:
-    - name: metrics
-      port: {{ index .Values "pipeline_driver_queue" "env" "metric_port" }}
-      targetPort: {{ index .Values "pipeline_driver_queue" "env" "metric_port" }}
     - port: {{ .Values.pipeline_driver_queue.env.rest_port }}
       targetPort: {{ .Values.pipeline_driver_queue.env.rest_port }}
       protocol: TCP
-      name: rest      
+      name: rest   
+    - name: metrics
+      port: {{ .Values.pipeline_driver_queue.env.metric_port }}
+      targetPort: {{ .Values.pipeline_driver_queue.env.metric_port }}
+   
