--- a/hkube/templates/configmaps/datasources-service-cm.yaml
+++ b/hkube/templates/configmaps/datasources-service-cm.yaml
@@ -13,7 +13,8 @@ data:
   BASE_FS_ADAPTER_DIRECTORY: {{ .Values.global.storage.fs.base_directory | quote}}
 {{- end }}  
   METRICS_PORT: {{ .Values.datasources_service.env.metric_port | quote}}
-  PORT: {{ .Values.datasources_service.env.port | quote}}
+  DATASET_SERVICE_REST_PORT: {{ .Values.datasources_service.env.port | quote}}
   INGRESS_PREFIX: {{ .Values.global.ingress.prefix | quote}}
   CLUSTER_NAME: {{ .Values.global.clusterName | quote}}
+  DATASOURCE_SERVICE_CONSUMER_CONCURRENCY: {{ .Values.datasources_service.env.consumer_concurrency | quote}}
 
