--- a/hkube/templates/datasources-service-deployment.yaml
+++ b/hkube/templates/datasources-service-deployment.yaml
@@ -70,41 +70,17 @@ spec:
               protocol: TCP
             - containerPort: {{ .Values.datasources_service.env.port }}
               protocol: TCP
+          envFrom:
+            - configMapRef:
+                name: datasources-service-configmap
           env:
 {{ include "hkube.fluent_bit.environment" . | indent 12 }}
-            - name: METRICS_PORT
-              valueFrom:
-                configMapKeyRef:
-                  name: datasources-service-configmap
-                  key: METRICS_PORT
             - name: POD_NAME
               valueFrom:
                 fieldRef:
                   fieldPath: 'metadata.name' 
-            - name: DATASET_SERVICE_REST_PORT
-              valueFrom:
-                configMapKeyRef:
-                  name: datasources-service-configmap
-                  key: PORT
-            - name: NODE_ENV
-              valueFrom:
-                configMapKeyRef:
-                  name: datasources-service-configmap
-                  key: NODE_ENV
-            - name: BASE_URL_PATH
-              valueFrom:
-                configMapKeyRef:
-                  name: datasources-service-configmap
-                  key: BASE_URL_PATH
             - name: BASE_DATASOURCES_DIRECTORY
               value: "/hkube/datasources-storage"
-{{- if eq .Values.env.default_storage "fs" }}
-            - name: BASE_FS_ADAPTER_DIRECTORY
-              valueFrom:
-                configMapKeyRef:
-                  name: datasources-service-configmap
-                  key: BASE_FS_ADAPTER_DIRECTORY
-{{- end }}
             - name: AWS_ACCESS_KEY_ID
               valueFrom:
                 secretKeyRef:
@@ -120,22 +96,7 @@ spec:
                 secretKeyRef:
                   name: s3-secret
                   key: awsEndpointUrl
-            - name: DEFAULT_STORAGE
-              valueFrom:
-                configMapKeyRef:
-                  name: datasources-service-configmap
-                  key: DEFAULT_STORAGE
-            - name: STORAGE_ENCODING
-              valueFrom:
-                configMapKeyRef:
-                  name: datasources-service-configmap
-                  key: STORAGE_ENCODING                  
-            - name: CLUSTER_NAME
-              valueFrom:
-                configMapKeyRef:
-                  name: datasources-service-configmap
-                  key: CLUSTER_NAME
-{{- if .Values.global.isPrivileged }}            
+{{- if .Values.global.isPrivileged }}
             - name: JAEGER_AGENT_SERVICE_HOST
               valueFrom:
                 fieldRef:
@@ -148,11 +109,6 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-            - name: INGRESS_PREFIX
-              valueFrom:
-                configMapKeyRef:
-                  name: datasources-service-configmap
-                  key: INGRESS_PREFIX
 {{- if .Values.mongodb.enable }}
             - name: MONGODB_SERVICE_USER_NAME
               valueFrom:
