--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -572,7 +572,7 @@ monitor_server: # +doc-gen:ignore
     max_display_batch_size: 10
   image:
     repository: hkube/monitor-server
-    tag: v2.4.1
+    tag: v2.4.1-upgrade-node-to-18-1
   ingress:
     enabled: true
     path: /hkube/monitor-server
@@ -605,7 +605,7 @@ pipeline_driver_queue: # +doc-gen:ignore
     base_url_path: /hkube/queue
   image:
     repository: hkube/pipeline-driver-queue
-    tag: v2.4.0-upgrade-node-to-18-2336728743
+    tag: v2.4.0-upgrade-to-node-18-1
   ingress:
     enabled: true
     path: /hkube/queue
