--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -575,8 +575,8 @@ monitor_server: # +doc-gen:ignore
     tag: v2.4.2
   ingress:
     enabled: true
-    path: /hkube/api-server
-    datasource_proxy_path: /hkube/api-server/datasource
+    path: /hkube/monitor-server
+    datasource_proxy_path: /hkube/monitor-server/datasource
   service:
     type: ClusterIP
   resources_enable: false
