add key DATA_SOURCE_IS_ENABLE

--- a/hkube/templates/configmaps/simulator-cm.yaml
+++ b/hkube/templates/configmaps/simulator-cm.yaml
@@ -16,3 +16,5 @@ data:
   BOARD_USE_LOCATION: {{ .Values.simulator.env.board_use_location | quote }}
   BOARD_HOST: {{ .Values.simulator.env.board_host | quote }}
   BOARD_PORT: {{ .Values.simulator.env.board_port | quote }}
+  
+  DATA_SOURCE_IS_ENABLE: {{ .Values.simulator.env.datasources_service.enabled | quote }}
