--- a/hkube/templates/configmaps/dashboards-configmaps.yaml
+++ b/hkube/templates/configmaps/dashboards-configmaps.yaml
@@ -1,4 +1,6 @@
-{{- $files := .Files.Glob "dashboards/*.json" }}
+---
+{{- $files := .Files.Glob "dashboards/grafana_dashboards/v6/*.json" }}
+{{- if eq $.Values.metrics.grafana_version "6" -}}
 {{- if $files }}
 apiVersion: v1
 kind: ConfigMapList
@@ -15,5 +17,28 @@ items:
 {{ toYaml $.Values.metrics.grafanaDashboardLabel | indent 6 }}
   data:
     {{ $dashboardName }}.json: {{ $.Files.Get $path | toJson }}
+{{- end }}
+{{- end }}
+{{- end }}
+---
+{{- $files := .Files.Glob "dashboards/grafana_dashboards/v7/*.json" }}
+{{- if eq $.Values.metrics.grafana_version "7" -}}
+{{- if $files }}
+apiVersion: v1
+kind: ConfigMapList
+items:
+{{- range $path, $fileContents := $files }}
+{{- $dashboardName := regexReplaceAll "(^.*/)(.*)\\.json$" $path "${2}" }}
+- apiVersion: v1
+  kind: ConfigMap
+  metadata:
+    name: {{ printf "dashboard-%s" $dashboardName | lower | trunc 63 | trimSuffix "-" }}
+    namespace: {{ $.Release.Namespace }}
+    labels:
+      app: hkube
+{{ toYaml $.Values.metrics.grafanaDashboardLabel | indent 6 }}
+  data:
+    {{ $dashboardName }}.json: {{ $.Files.Get $path | toJson }}
+{{- end }}
 {{- end }}
 {{- end }}
