--- a/hkube/templates/task-executor-deployment.yaml
+++ b/hkube/templates/task-executor-deployment.yaml
@@ -111,7 +111,7 @@ spec:
                 configMapKeyRef:
                   name: task-executor-configmap
                   key: HAS_NODE_LIST
-            - name: PODS_OUTPUT_LOGS_FOLDER
+            - name: PODS_OUTPUT_LOG_FOLDER
               valueFrom:
                 configMapKeyRef:
                   name: task-executor-configmap
