--- a/hkube/templates/task-executor-deployment.yaml
+++ b/hkube/templates/task-executor-deployment.yaml
@@ -111,6 +111,11 @@ spec:
                 configMapKeyRef:
                   name: task-executor-configmap
                   key: HAS_NODE_LIST
+            - name: PODS_OUTPUT_LOG_FOLDER
+              valueFrom:
+                configMapKeyRef:
+                  name: task-executor-configmap
+                  key: PODS_OUTPUT_LOG_FOLDER            
             - name: NAMESPACE
               valueFrom:
                 fieldRef:
