--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -266,6 +266,8 @@ metrics:
     grafana_dashboard: "1"
   # set to '7' when use Grafana version >= 7, default '6'
   grafana_version: "6"
+  # set your data source here, replaces "${placeHolderSource}" values in all ./dashboards/grafana_dashboards/../*.json files
+  data_source: Prometheus
 systemversion: v2.5.24
 build_secret:
   # docker registry for algorithm builds. defaults to docker.io
