grafana_data_source rename+documentation

--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -266,8 +266,8 @@ metrics:
     grafana_dashboard: "1"
   # set to '7' when use Grafana version >= 7, default '6'
   grafana_version: "6"
-  # set your data source here, replaces "${placeHolderSource}" values in all ./dashboards/grafana_dashboards/../*.json files
-  data_source: Prometheus
+  # set the name of the data source defined in grafana, where hkube metrics are collected ./dashboards/grafana_dashboards/*.json files
+  grafana_data_source: Prometheus
   # used to set 'expr' value in HKube_status.json, replaces the partial string "${thirdParty} for grafana_version == 6"
   hkube_3rdparty_v6: "count(mixin_pod_workload{workload=~"
   # used to set 'expr' value in HKube_status.json, replaces the partial string "${thirdParty} for grafana_version == 7"
